Fixed ScrapperService test